; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_port.c_tipc_disconnect.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_port.c_tipc_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.port = type { i32 }
%struct.tipc_port = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tipc_disconnect(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.port*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.port* @tipc_port_lock(i32 %6)
  store %struct.port* %7, %struct.port** %4, align 8
  %8 = load %struct.port*, %struct.port** %4, align 8
  %9 = icmp ne %struct.port* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %20

13:                                               ; preds = %1
  %14 = load %struct.port*, %struct.port** %4, align 8
  %15 = bitcast %struct.port* %14 to %struct.tipc_port*
  %16 = call i32 @tipc_disconnect_port(%struct.tipc_port* %15)
  store i32 %16, i32* %5, align 4
  %17 = load %struct.port*, %struct.port** %4, align 8
  %18 = call i32 @tipc_port_unlock(%struct.port* %17)
  %19 = load i32, i32* %5, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %13, %10
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local %struct.port* @tipc_port_lock(i32) #1

declare dso_local i32 @tipc_disconnect_port(%struct.tipc_port*) #1

declare dso_local i32 @tipc_port_unlock(%struct.port*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
